\name{NEWS}
\title{News for Package \pkg{smacof}}
\encoding{UTF-8}

\section{Changes in Version 1.10-2}{
  \itemize{
    \item unfolding() updated with relaxed update that often reduces the iterations by a factor 2).
    \item unfolding() updated with an overal rescaling to the coordinates, distances, and d-hats.
    }
}


\section{Changes in Version 1.10-1}{
  \itemize{
    \item smacofRect() updated to do nonlinear unfolding added matrix and row conditional).
    \item prefscal() is an alias for unfolding() and smacofRect()
    \item plot.smacofR() updated to show row transformations by smacofR and show column labels.
    \item mspline transformation in mds() and smacofSym() now includes an intercept.
    }
}

\section{Changes in Version 1.10-0}{
  \itemize{
    \item smacofRect updated for nonlinear unfolding added (only matrix conditional).
    \item plot.smacofR updated to show transformations by smacofR.
}
}


\section{Changes in Version 1.9-7}{
  \itemize{
    \item Procrustes help file updated.
    \item Bug in SPP fixed. 
}
}


\section{Changes in Version 1.9-7}{
  \itemize{
    \item Some help files fixed.
}
}

\section{Changes in Version 1.9-6}{
  \itemize{
    \item Registration for C function calls fixed.
}
}

\section{Changes in Version 1.9-5}{
  \itemize{
    \item Plot option for summed distances for \code{smacofIndDiff} models added. 
}
}

\section{Changes in Version 1.9-4}{
  \itemize{
    \item Fast optimal scaling in \code{smacofSphere} including msplines. 
    \item Primal algorithm in \code{smacofSphere} accelerated.
    \item Bug for smacofSP Shepard plots fixed. 
    \item \code{cex} argument for unfolding configuration plot activated.
    \item Thigmophobe label option in \code{plot.mdsbi} added. 
    \item Multiple panels for \code{plot.smacofID} improved (thanks to Lew Harvey for the fix). 
}
}


\section{Changes in Version 1.9-3}{
  \itemize{
    \item \code{type = "ratio"} for all models restored.
}
}
