@@ -14,7 +14,7 @@ alpha = 0.05, verbose = FALSE, ...)
 
 \method{plot}{smacofboot}(x, plot.dim = c(1,2), col = 1, 
 label.conf = list(label = TRUE, pos = 3, cex = 0.8), 
-ell = list(lty = 1, lwd = 1, col = 1), main, xlab, ylab, xlim, ylim, asp = 1, 
+ell = list(lty = 1, lwd = 1), main, xlab, ylab, xlim, ylim, asp = 1, 
 type = "p", pch = 20, ...)
 }
 %- maybe also 'usage' for other objects documented here.
